--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "antd": "4.18.7",
     "axios": "^1.2.2",
     "classnames": "2.3.1",
-    "formik": "2.2.9",
+    "formik": "^2.2.9",
     "gh-pages": "3.2.3",
     "jest": "27.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.43.1",
     "react-redux": "7.2.6",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
